# msc-ai-data-science-projects

./: README.md
cs801-quantitative-methods-ai/: .gitattributes  .gitignore  README.md  environment.yml  requirements.txt
cs985-spotify-popularity-genre-ml/: .gitignore  README.md  pyproject.toml  requirements.txt
cs985-spotify-popularity-genre-ml/data/: README.md
cs985-spotify-popularity-genre-ml/notebooks/: spotify_popularity_genre_modelling.ipynb
cs985-spotify-popularity-genre-ml/outputs/: README.md
cs985-spotify-popularity-genre-ml/reports/: local_validation_metrics.csv  model_comparison.md
cs985-spotify-popularity-genre-ml/src/spotify_ml/: __init__.py  config.py  data.py  evaluation.py  features.py  pipelines.py  run_experiments.py
cs985-spotify-popularity-genre-ml/tests/: test_features.py  test_pipelines.py
project-rag-nhs/: .env.example  .gitignore  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
project-rag-nhs/configs/: default.yaml
project-rag-nhs/data/synthetic/: synthetic_ehr_docs.jsonl  synthetic_qrels.json
project-rag-nhs/docs/: DATA_HANDLING.md  ETHICS_AND_GOVERNANCE.md  EVALUATION_PLAN.md  METHODOLOGY.md  PROJECT_PLAN.md  REFERENCES.md  RISK_REGISTER.md
project-rag-nhs/examples/: example_questions.yaml
project-rag-nhs/src/clinrag/: __init__.py  cli.py  clinical_safety.py  config.py  data_loader.py  data_models.py  evaluation.py  fhir_mapper.py  generator.py  preprocessing.py  rag_pipeline.py  retrieval.py
project-rag-nhs/tests/: test_pipeline.py  test_retrieval.py  test_safety.py
(+69 files in other folders)
